--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "typecheck": "tsc -b --noEmit"
   },
   "dependencies": {
+    "immer": "^11.0.1",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
